# auto_clean_bot

./: .clang-format  .gitignore  README.md  build.bash  消息说明.md
scripts/: build_gmsl_camera.bash  build_msg.bash  build_perception.bash  create_pkg.bash  perception_run.bash  run_gmsl_miivii.bash  run_lidar.bash
src/HMI/: CMakeLists.txt  package.xml
src/bot_msg/: CMakeLists.txt  package.xml
src/bot_msg/msg/: ADCTrajectory.msg  ChassisInfo.msg  ControlCmd.msg  LaneInfo.msg  LaneLine.msg  LaneLineCubicCurve.msg  LaneSet.msg  Lanes.msg  LocalizationInfo.msg  ObstacleInfo.msg  Obstacles.msg  TrajectoryPoint.msg
src/calibration/: package.xml
src/canbus/: CMakeLists.txt  package.xml
src/control/: package.xml
src/drivers/inno_lidar_ros/: build.bash
src/drivers/inno_lidar_ros/src/inno_sdk/: README.md_SDKdeploy
src/drivers/inno_lidar_ros/src/inno_sdk/apps/example/: CMakeLists.txt  Makefile  demo.cpp
src/drivers/inno_lidar_ros/src/inno_sdk/docs/: demo.md  get_frame_rate.md  get_packet_loss_rate.md  http_command_test.md  inno_pc_client.md  latency_diagram.md  parse.md
src/drivers/inno_lidar_ros/src/inno_sdk/lib/: libinnolidarsdkclient.so.0.0.0  libinnolidarsdkcommon.so.0.0.0  libinnolidarutils.so.0.0.0
src/drivers/inno_lidar_ros/src/inno_sdk/src/sdk_client/: Makefile  inno_lidar_packet_v1_adapt.h  lidar_client.cpp  lidar_client_communication.cpp  stage_client_read_pcap.cpp  stage_client_read_pcap.h
src/drivers/inno_lidar_ros/src/inno_sdk/src/sdk_common/: Makefile  inno_faults_falconII_dot_1.h  inno_lidar_api.h  inno_lidar_other_api.h  inno_lidar_packet.h  inno_lidar_packet_utils.cpp  lidar_base.h
src/drivers/inno_lidar_ros/src/inno_sdk/src/sdk_common/converter/: cframe_converter.cpp
src/drivers/inno_lidar_ros/src/inno_sdk/src/utils/: Makefile  consumer_producer.cpp  utils.h
src/drivers/inno_lidar_ros/src/node/: publisher.cc
src/drivers/inno_lidar_ros/src/node/driver/: driver_lidar.h
src/drivers/miivii_gmsl_camera/: README.md
src/drivers/miivii_gmsl_camera/miivii_gmsl_ros/include/miivii_gmsl_camera/: miivii_gmsl_camera.hpp
src/drivers/miivii_gmsl_camera/miivii_gmsl_ros/launch/: single.launch
src/drivers/miivii_gmsl_camera/miivii_gmsl_ros/src/: miivii_gmsl_camera.cpp
src/drivers/miivii_gmsl_ros/include/miivii_gmsl_camera/: miivii_gmsl_camera.hpp
src/drivers/miivii_gmsl_ros/launch/: miivii_gmsl.launch  single.launch
src/drivers/miivii_gmsl_ros/src/: miivii_gmsl_camera.cpp
src/hmi/: CMakeLists.txt  package.xml
src/inno_sw_ros2/: LICENSE  README.md  build.bash
src/inno_sw_ros2/src/inno_lidar_ros/: CMakeLists.txt
src/inno_sw_ros2/src/inno_lidar_ros/launch/: ivu_pc2.py
src/inno_sw_ros2/src/inno_lidar_ros/msg/: InnovusionPacket.msg  InnovusionScan.msg
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/: .clang-format  LICENSE  Makefile  README.md  add-commit-msg-hook.sh
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/apps/: README.md
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/apps/example/: sphere2xyz.cpp
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/build_unix/: CMakeCache.txt  Makefile  cmake_install.cmake
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/build_unix/src/: Makefile  cmake_install.cmake
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/build_unix/src/sdk_client/: Makefile  cmake_install.cmake
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/build_unix/src/sdk_common/: Makefile  cmake_install.cmake
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/build_unix/src/utils/: Makefile  cmake_install.cmake
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/docs/: DEPENDENCY.md  how_to_build_and_run_on_macos.md  how_to_build_and_run_on_windows.md  py_module.md
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/lib/: libinnolidarsdkclient.so.0.0.0  libinnolidarsdkcommon.so.0.0.0  libinnolidarutils.so.0.0.0
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/src/sdk_client/: CMakeLists.txt  lidar_client.h  lidar_client_communication.h  ring_id_converter.cpp  ring_id_converter.h  stage_client_deliver.cpp  stage_client_deliver.h  stage_client_read.cpp  stage_client_read.h
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/src/sdk_common/: api_common.cpp  inno_faults_common.h  inno_lidar_packet_utils.h  lidar_communication.cpp  robin_nps_adjustment.h
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/src/sdk_common/converter/: rosbag_recorder.cpp
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/src/utils/: log.h  net_manager.cpp
src/inno_sw_ros2/src/inno_lidar_ros/src/inno_sdk/unitest/: Makefile.unitest
src/inno_sw_ros2/src/inno_lidar_ros/src/node/driver/: driver_lidar.cc  point_types.h
src/launch_manager/: CMakeLists.txt  package.xml
src/localization/: package.xml
src/map/: CMakeLists.txt  package.xml
src/perception/: CMakeLists.txt  package.xml
src/perception/config/: config.yaml  perception_config.yaml
src/perception/include/perception/: perception.h
src/perception/lane_detector/: CMakeLists.txt  package.xml
src/perception/lane_detector/config/: lane_detector_config.yaml
src/perception/lane_detector/include/lane_detector/: lane_def.h  lane_detector.h
src/perception/lane_detector/launch/: lane_detector.launch.py
src/perception/lane_detector/src/: lane_detector.cpp
src/perception/launch/: perception.launch.py
src/perception/perception/: CMakeLists.txt  package.xml
src/perception/perception/config/: perception_config.yaml
src/perception/perception/include/perception/: perception.h
src/perception/perception/launch/: perception.launch.py
src/perception/perception/src/: perception.cpp
src/perception/src/: main.cpp  perception.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/src/: planning_node.cpp
src/prediction/: CMakeLists.txt  package.xml
src/routing/: CMakeLists.txt  package.xml
src/transform/: CMakeLists.txt  package.xml
